# rag2f

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  SPOCK_README.md  config.example.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  testing.instructions.md
.github/workflows/: ci-dev-testpypi.yml  release-tags.yml  ruff.yml
examples/: README.md  hello_flux_capacitor.py  spock_complete_example.py  spock_usage_examples.py
llm/: creating_plugins.md  creating_plugins.txt  indiana_jones.txt  johnny5.txt  llms.txt  morpheus.md  morpheus.txt  optimus_prime.md  optimus_prime.txt  spock.md  spock.txt  testing.txt  using_plugins.txt  xfiles.txt
mkdocs/: mkdocs.yml  requirements-docs.txt
mkdocs/.github/workflows/: docs.yml
mkdocs/mkdocs/: index.md
mkdocs/mkdocs/concepts/: embedders-optimus-prime.md
notes/: result-pattern.md
plugins/azure_openai_embedder/: CONFIG.md  bootstrap_hook.py  config.json.example  embedder.py  requirements.txt
plugins/macgyver/src/: dto.py
plugins/rag2f_azure_openai_embedder/: CONFIG.md  __init__.py  plugin.json  pyproject.toml
plugins/rag2f_azure_openai_embedder/src/: __init__.py  bootstrap_hook.py  embedder.py  plugin_context.py
plugins/rag2f_azure_openai_embedder/test/: conftest.py  test_bootstrap_hook.py  test_embedder_unit.py
plugins/rag2f_macgyver/: README.md  __init__.py  plugin.json  pyproject.toml
plugins/rag2f_macgyver/src/: dto.py  input.py
plugins/rag2f_openai_embedder/: pyproject.toml
plugins/rag2f_openai_embedder/test/: conftest.py  test_embedder_unit.py
scripts/: README.md  bootstrap-venv.sh  build-local.sh  test_release_setup.sh
src/rag2f/: __init__.py
src/rag2f/core/: __init__.py  rag2f.py  utils.py
src/rag2f/core/dto/: __init__.py  indiana_jones_dto.py  johnny5_dto.py  result_dto.py  xfiles_dto.py
src/rag2f/core/flux_capacitor/: __init__.py  agent.py  errors.py  flux_capacitor.py  jobs.py  queue.py  store.py  task_models.py
src/rag2f/core/indiana_jones/: __init__.py  exceptions.py  indiana_jones.py
src/rag2f/core/johnny5/: __init__.py  exceptions.py  johnny5.py
src/rag2f/core/morpheus/: __init__.py  morpheus.py  package_installer.py  plugin.py  plugin_manifest.py
src/rag2f/core/morpheus/decorators/: __init__.py  hook.py  plugin_decorator.py
src/rag2f/core/optimus_prime/: __init__.py  optimus_prime.py
src/rag2f/core/protocols/: __init__.py  embedder.py
src/rag2f/core/spock/: __init__.py  spock.py
src/rag2f/core/xfile/: __init__.py  capabilities.py  exceptions.py  repository.py  types.py  validation.py  xfile.py
src/rag2f/core/xfiles/: __init__.py  capabilities.py  exceptions.py  repository.py  types.py  validation.py  xfiles.py
tests/: __init__.py  conftest.py  techniques.md  utils.py
tests/core/: test_all_hooks.py  test_all_override.py  test_flux_capacitor.py  test_flux_capacitor_minimal.py  test_indiana_jones.py  test_johnny5.py  test_mock_plugin_manifest_root_first_integration.py  test_optimus_prime.py  test_plugin_entry_points.py  test_spock.py  test_spock_integration.py
tests/core/xfile/: __init__.py  conftest.py  test_arity.py  test_capabilities.py  test_capability_support.py  test_edge_cases.py  test_field_allowlist.py  test_native_escape_hatch.py  test_operator_support.py  test_pagination.py  test_query_spec_dto.py  test_valid_queries.py  test_validation.py  test_validation_errors.py
tests/core/xfiles/: __init__.py  conftest.py  test_arity.py  test_capabilities.py  test_capability_support.py  test_edge_cases.py  test_field_allowlist.py  test_native_escape_hatch.py  test_operator_support.py  test_pagination.py  test_query_spec_dto.py  test_valid_queries.py  test_validation_errors.py  test_xfiles_manager.py
tests/mocks/plugins/agent_plugin/: __init__.py  agent_hooks.py  plugin.json
tests/mocks/plugins/flux_plugin/: __init__.py  flux_hooks.py  flux_plugin_overrides.py  plugin.json
tests/mocks/plugins/mock_plugin/: __init__.py  mock_all_hook.py  mock_hook.py  mock_plugin_overrides.py  plugin.json  plugin_context.py
tests/mocks/plugins/mock_plugin/nested_folder/: mock_another_hook.py  plugin.json
tests/mocks/plugins/mock_plugin_pyproject/: mock_hook.py  pyproject.toml
tests/morpheus/: test_get_plugin_id.py  test_hooks.py  test_plugin.py  test_plugin_loader_state.py  test_plugin_manifest_loading.py
