[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag2f-macgyver"
version = "0.0.1"
description = "MacGyver - Lightweight in-memory plugin for RAG2F experiments"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
authors = [
    {name = "RAG2F Team"}
]
dependencies = [
    "rag2f>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/rag2f/rag2f"
Repository = "https://github.com/rag2f/rag2f"

[project.entry-points."rag2f.plugins"]
macgyver = "rag2f_macgyver:get_plugin_path"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag2f_macgyver"]

[tool.setuptools.package-data]
"*" = ["plugin.json", "settings.json", "src/**/*.py"]
